--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,57 +1,42 @@
 version: v1.0
 name: Semaphore Python / Flask / Docker Example Pipeline
 agent:
-  machine:    
+  machine:
     type: e1-standard-2
     os_image: ubuntu1804
 blocks:
   - name: Build
     task:
-      # Mount a secret which defines DOCKER_USERNAME and DOCKER_PASSWORD
-      # environment variables.
-      # For info on creating secrets, see:
-      # https://docs.semaphoreci.com/article/66-environment-variables-and-secrets
       secrets:
         - name: pyflask-semaphore
       jobs:
-      - name: Docker build
-        commands:
-          # Authenticate with Docker Hub
-          - echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
-          - checkout
-          - docker-compose build
-          - docker tag pyflasksemaphore:latest "$DOCKER_USERNAME"/pyflasksemaphore:latest
-          - docker tag pyflasksemaphore:latest "$DOCKER_USERNAME"/pyflasksemaphore:$SEMAPHORE_WORKFLOW_ID
-          - docker push "$DOCKER_USERNAME"/pyflasksemaphore:latest
-          - docker push "$DOCKER_USERNAME"/pyflasksemaphore:$SEMAPHORE_WORKFLOW_ID
-          - docker images
-
+        - name: Docker build
+          commands:
+            - 'echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin'
+            - checkout
+            - docker-compose build
+            - 'docker tag pyflasksemaphore:latest "$DOCKER_USERNAME"/pyflasksemaphore:latest'
+            - 'docker tag pyflasksemaphore:latest "$DOCKER_USERNAME"/pyflasksemaphore:$SEMAPHORE_WORKFLOW_ID'
+            - 'docker push "$DOCKER_USERNAME"/pyflasksemaphore:latest'
+            - 'docker push "$DOCKER_USERNAME"/pyflasksemaphore:$SEMAPHORE_WORKFLOW_ID'
+            - docker images
   - name: Run & Test Docker image
     task:
-      # Mount a secret which defines DOCKER_USERNAME and DOCKER_PASSWORD
-      # environment variables.
-      # For info on creating secrets, see:
-      # https://docs.semaphoreci.com/article/66-environment-variables-and-secrets
       secrets:
         - name: pyflask-semaphore
       prologue:
         commands:
-          # Authenticate with Docker Hub
-          - echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin
+          - 'echo "${DOCKER_PASSWORD}" | docker login -u "${DOCKER_USERNAME}" --password-stdin'
           - checkout
           - docker pull "$DOCKER_USERNAME"/pyflasksemaphore
           - docker-compose up -d
       jobs:
-      - name: Check Running Images
-        commands:
-          - docker ps
-      - name: Run Unit test
-        commands:
-          - docker exec -it semaphore-pyflask-docker_flasksemaphore_1 python -m unittest
-
-# Manual deployment to Heroku on successful builds on master branch:
-# For info on promotions, see:
-# https://docs.semaphoreci.com/article/50-pipeline-yaml#promotions
+        - name: Check Running Images
+          commands:
+            - docker ps
+        - name: Run Unit test
+          commands:
+            - docker exec -it semaphore-pyflask-docker_flasksemaphore_1 python -m unittest
 promotions:
   - name: Deploy to Heroku
     pipeline_file: deploy-heroku.yml
