--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -34,11 +34,9 @@ blocks:
         - name: Check Running Images
           commands:
             - docker ps
-        - name: Run Unit test
+        - name: Run Unit test & Calculate Code Coverage
           commands:
             - docker exec -it semaphore-pyflask-docker_flasksemaphore_1 python -m unittest
-        - name: Calculate Test Coverage
-          commands:
             - coverage run -m unittest discover
             - coverage report -m
 promotions:
